# road-quality-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
models/: road_quality_model.pkl  scaler.pkl  thresholds.json
scripts/: batch_run.sh  run_pipeline.py
src/road_pipeline/: __init__.py  camm_extract.py  crop.py  detect.py  export.py  features.py  frame_coords.py  merge.py  portal.py  predict.py  utils.py
